--- a/.github/workflows/deploy-agents-ui.yml
+++ b/.github/workflows/deploy-agents-ui.yml
@@ -19,7 +19,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write
 
     steps:
       - name: Checkout
@@ -45,8 +44,7 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
@@ -60,8 +58,7 @@ jobs:
         run: |
           gcloud builds submit web-ui/agents-ui \
             --tag $IMAGE \
-            --project $GCP_PROJECT_ID \
-            --build-arg VITE_AGENTS_API_BASE_URL=${VITE_AGENTS_API_BASE_URL}
+            --project $GCP_PROJECT_ID
 
       - name: Deploy to Cloud Run
         run: |
