--- a/.github/workflows/deploy-agents-ui.yml
+++ b/.github/workflows/deploy-agents-ui.yml
@@ -2,15 +2,15 @@ name: Deploy Agents UI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
-      - 'web-ui/agents-ui/**'
+      - "web-ui/agents-ui/**"
 
 env:
   CLOUD_RUN_SERVICE: agents-ui
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: us-central1
-  IMAGE: gcr.io/${{ secrets.GCP_PROJECT_ID }}/agents-ui:${{ github.sha }}
 
 jobs:
   deploy:
@@ -19,39 +19,36 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Build UI
+      - name: Install & Build UI
         working-directory: web-ui/agents-ui
+        env:
+          VITE_AGENTS_API_BASE_URL: https://agents.easops.com
         run: |
           npm ci
           npm run build
-        env:
-          VITE_AGENTS_API_BASE_URL: https://agents.easops.com
 
-      - name: Auth GCP
+      - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - uses: google-github-actions/setup-gcloud@v2
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Deploy
+      - name: Deploy to Cloud Run (build + deploy in one step)
         run: |
-          gcloud builds submit web-ui/agents-ui \
-            --tag $IMAGE \
-            --project $GCP_PROJECT_ID \
-            --async
-
-
           gcloud run deploy agents-ui \
-            --image $IMAGE \
+            --source web-ui/agents-ui \
             --region us-central1 \
             --project $GCP_PROJECT_ID \
             --platform managed \
