Make agents API base configurable by default

--- a/web-ui/agents-ui/.env.example
+++ b/web-ui/agents-ui/.env.example
@@ -1,1 +1,3 @@
-VITE_AGENTS_API_BASE_URL=https://agents.easops.com
+# Leave blank to call the registry on the same origin as the UI
+# VITE_AGENTS_API_BASE_URL=https://agents.example.com
+VITE_AGENTS_API_BASE_URL=
